--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -20,14 +20,14 @@ body {
     margin: 50px auto;
 }
 
-header.logo {
+.logo {
     font-weight: 600;
     font-size: 20px;
 }
 
- header.presentation {
+.presentation {
     margin: 50px 0;
-    background: url('./img/design.jpg') no-repeat;
+     background: url('../../img/design.jpg') no-repeat; 
     width: 100%; 
     height: 500px;
     background-size: cover; 
